# DIA-CW

./: .gitignore  CSbacktest.md  README.md  all.md  backtestreadme.md  fixed.md
poly-ok-check/: .gitignore  AGENT_MEMORY.md  Cargo.toml  Outline.txt  README_SESSION_HANDOFF.md  STRATEGY_PORT_API.md  TODO.md  hub.example.toml  orderbook_auto.jsonl  orderbook_auto2.jsonl  orderbook_diag.jsonl  orderbook_live.jsonl  outline-back.md  requirements.txt
poly-ok-check/data/hub_archive/: slices-2026-03-15.jsonl
poly-ok-check/docs/: backtesting.md  btc_multi_market_update.md  news_integration_update.md  paper_evidence_fixes.md  paper_fill_plan.md  paper_placeholder_map.md  repo_structure.md  responsibilities.md
poly-ok-check/research/: __init__.py  market_data.py  polymarket_history.py  pyproject.toml
poly-ok-check/research/adapters/: __init__.py  acy_news_adapter.py  cs2_adapter.py  weather_adapter.py
poly-ok-check/research/backtest/: __init__.py  backtest_env.py  execution.py  generic_env.py  outcomes.py  portfolio.py  report.py
poly-ok-check/research/config/: __init__.py  base_config.py  cost_config.py  cw_experiment.yaml
poly-ok-check/research/core/: __init__.py  calibrator.py  data_simulator.py  edge_calculator.py  feature_builder.py  (+1 more)
poly-ok-check/src/: agent.rs  archive.rs  config.rs  contracts.rs  data_hub.rs  lib.rs  main.rs  polymarket_agent.rs  storage.rs
poly-ok-check/tests/: contracts_roundtrip.rs  polymarket_agent.rs  runtime_scenarios.rs  trait_contracts.rs
poly-ok-check/top200/: polymarket_methodology.md  polymarket_top200_analysis.py
(+142 files in other folders)
